# rift

./: .gitignore  Cargo.toml  README.md  specs.md
.github/workflows/: ci.yml  linux-filesystems-extended.yml  npm-release.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: filesystem_e2e.rs
crates/cli/tests/support/: filesystem.rs
crates/core/: Cargo.toml
crates/core/benches/: AUTORESEARCH.md  compare.rs  create.rs
crates/core/src/: config.rs  copy.rs  filter.rs  git.rs  hook.rs  id.rs  lib.rs  linux_filesystem_tests.rs  lock.rs  marker.rs  name.rs  registry.rs  tests.rs
crates/core/src/strategy/: apfs.rs  btrfs.rs  linux.rs  mod.rs  reflink.rs  xfs.rs
crates/core/src/test_support/: linux_extents.rs  mod.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
docs/: releasing.md
npm/rift/: native.js  package.json
npm/rift-darwin-arm64/: package.json
npm/rift-darwin-x64/: package.json
npm/rift-linux-arm64/: package.json
npm/rift-linux-x64/: package.json
npm/rift-snapshot/: index.d.ts  package.json  postinstall.mjs
npm/rift-snapshot-darwin-arm64/: package.json
npm/rift-snapshot-darwin-x64/: package.json
npm/rift-snapshot-linux-x64/: package.json
npm/rift-snapshot-windows-x64/: package.json
npm/rift-snapshot/bun/: index.js
npm/rift-snapshot/node/: index.js
npm/rift-windows-arm64/: package.json
npm/rift-windows-x64/: package.json
npm/rift/bun/: index.js
npm/rift/node/: index.js
scripts/: build.sh  check-npm-versions.mjs  install.sh  npm-find-tarball.mjs  npm-pack-filename.mjs  prepare-npm-native.mjs  prepare-npm-package.mjs  prepare-npm-prebuild.mjs  tar-args.mjs  test-missing-native.mjs  test-packed-api.mjs  test-packed-cli.mjs  test-packed-unavailable-api.mjs  test-packed-unavailable-cli.mjs  verify-npm-native-package.mjs  verify-npm-package.mjs
scripts/ci/: linux-fs.sh  linux-package-e2e.sh  packed-npm-e2e.sh
