[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/ffi"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.9"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
libc = "0.2"
rand = "0.9"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
ulid = "1.2"
walkdir = "2.5"
