[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/ffi"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.10"

# The CLI and FFI library ship in the npm package; trade compile time for
# smaller distributed binaries. `panic = "abort"` is deliberately not set:
# the FFI cdylib must keep unwinding survivable for its host process.
[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
libc = "0.2"
rand = "0.9"
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
toml = "0.8"
ulid = "1.2"
walkdir = "2.5"
