[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/ffi"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.10"

# The CLI and FFI library ship in the npm package; trade compile time for
# smaller distributed binaries. `panic = "abort"` is deliberately not set:
# the FFI cdylib must keep unwinding survivable for its host process.
[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fs2 = "0.4.3"
libc = "0.2.186"
rand = "0.10.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
ulid = "1.2.1"
walkdir = "2.5.0"
