[package]
name = "rift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
libc.workspace = true
rand.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
ulid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
