[package]
name = "rift"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
libc.workspace = true
rand.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
ulid.workspace = true
walkdir.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
git2 = { version = "0.20", default-features = false }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[bench]]
name = "create"
harness = false

[[bench]]
name = "compare"
harness = false
